--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
         <title>Proje</title>
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -33,7 +34,7 @@
                 </div>
             </div> <!-- end of .header-->
             <div class="left-block">
-                <img class="laker" src="image/lakers.jpg">
+                <img class="laker" src="image/lakers.png">
                 <div class="left-block-main">
                     <p class="left-metin">Merkez Bankası'nın 7/24 para transferi sağlayan anlık ödeme sistemi FAST, kullanıma açıldı</p>
                     <p class="left-metin-1">18 Aralık 2020 tarihinden itibaren pilot uygulama olarak hizmete sunulan, FAST itibaren kullanıma açılıdı.</p>
@@ -41,10 +42,31 @@
                         <p>Gözde Uluk</p><p>12 saat önce</p>
                     </div>
                 </div> <!-- end of .left-block-main -->
-                
-            </div>
+            </div> <!-- end of .left-block-->
             <div class="right-block">
-
+                <h1>Öne çıkanlar</h1>
+                <div class="right-block-news">
+                    <div class="news">
+                        <img src="image/haber-1.png">
+                        <h3><a class="news-link" href="#">2020 yılına damga vuran Among Us,bugüne kadar neler yaptı?</a></h3>
+                        <p><a href="#">Arden Papuççiyan</a></p><p>08 Ocak 2021</p>
+                    </div>
+                    <div class="news">
+                        <img src="image/haber-2.png">
+                        <h3><a class="news-link " href="#">Tüm detayları ile sosyal medyada Donald Trump yasağı</a></h3>
+                        <p><a href="#">Tuğçe İçözü</a></p><p>1 gün önce</p>
+                    </div>
+                    <div class="news">
+                        <img src="image/haber-3.png">
+                        <h3><a class="news-link" href="#">Hyundai motor'un hisseleri, olası Apple anlaşması nedeniyle yüzde 20 oranda arttı</a></h3>
+                        <p><a class="lentgh"href="#">Gözde Uluk</a></p><p>08 Ocak 2021</p>
+                    </div>
+                    <div class="news">
+                        <img src="image/haber-4.png">
+                        <h3><a class="news-link" href="#">İnovasyon ve Girişimcilik Platformu Plug and Play, MEXT ile İstanbul'a geliyor </a></h3>
+                        <h6> <a href="#">Sponsorlu</a></h6>
+                    </div>
+                </div>
             </div> <!-- end of .right-block-->
         </div> <!-- end of .genel-container-->
     </body>
