--- a/index.html
+++ b/index.html
@@ -48,23 +48,43 @@
                 <div class="right-block-news">
                     <div class="news">
                         <img src="image/haber-1.png">
-                        <h3><a class="news-link" href="#">2020 yılına damga vuran Among Us,bugüne kadar neler yaptı?</a></h3>
-                        <p><a href="#">Arden Papuççiyan</a></p><p>08 Ocak 2021</p>
+                        <div class="news-precontent">
+                            <a class="news-link" href="#">2020 yılına damga vuran Among Us,bugüne kadar neler yaptı?</a>
+                            <div class="news-detail">
+                                <a class="designed-by" href="#">Arden Papuççiyan</a>
+                                <span>08 Ocak 2021</span>
+                            </div>
+                        </div>
                     </div>
+
                     <div class="news">
                         <img src="image/haber-2.png">
-                        <h3><a class="news-link " href="#">Tüm detayları ile sosyal medyada Donald Trump yasağı</a></h3>
-                        <p><a href="#">Tuğçe İçözü</a></p><p>1 gün önce</p>
+                    <div class="news-precontent">
+                        <a class="news-link " href="#">Tüm detayları ile sosyal medyada Donald Trump yasağı</a>
+                        <div class="news-detail">
+                            <a class="designed-by" href="#">Tuğçe İçözü</a>
+                            <span>21 Aralık 2021</span>
+                        </div>
+                    </div>
                     </div>
                     <div class="news">
                         <img src="image/haber-3.png">
-                        <h3><a class="news-link" href="#">Hyundai motor'un hisseleri, olası Apple anlaşması nedeniyle yüzde 20 oranda arttı</a></h3>
-                        <p><a class="lentgh"href="#">Gözde Uluk</a></p><p>08 Ocak 2021</p>
+                    <div class="news-precontent">
+                        <a class="news-link" href="#">Hyundai motor'un hisseleri, olası Apple anlaşması nedeniyle yüzde 20 oranda arttı</a>
+                        <div class="news-detail"> 
+                            <a class="designed-by"href="#">Gözde Uluk</a>
+                            <span>08 Ocak 2021</span>
+                        </div>
+                    </div>
                     </div>
                     <div class="news">
                         <img src="image/haber-4.png">
-                        <h3><a class="news-link" href="#">İnovasyon ve Girişimcilik Platformu Plug and Play, MEXT ile İstanbul'a geliyor </a></h3>
-                        <h6> <a href="#">Sponsorlu</a></h6>
+                    <div class="news-precontent">
+                        <a class="news-link" href="#">İnovasyon ve Girişimcilik Platformu Plug and Play, MEXT ile İstanbul'a geliyor </a>
+                        <div class="news-detail">
+                            <a class="designed-by color"href="#">Sponsorlu</a>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div> <!-- end of .right-block-->
