--- a/index.html
+++ b/index.html
@@ -84,10 +84,74 @@
                         <div class="news-detail">
                             <a class="designed-by color"href="#">Sponsorlu</a>
                         </div>
-                    </div>
-                    </div>
-                </div>
+                    </div> <!--end of . new-precontent-->
+                    </div> <!-- end of .news-->
+                </div> <!-- end of .right-block-news -->
             </div> <!-- end of .right-block-->
         </div> <!-- end of .genel-container-->
+        <div class="enterence">
+            <div class="enterence-left">
+                <div class="box">
+                    <div class="left-text">
+                        <h1 class="enterence-title">DİJİTAL</h1>
+                        <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
+                        <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
+                        <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
+                    </div>
+                    <div class="enterence-image">
+                        <img class="tiktok-image" src="image/tiktok.png">
+                    </div>
+            </div> <!-- end of .box -->
+            <div class="box">
+                <div class="left-text">
+                    <h1 class="enterence-title">DİJİTAL</h1>
+                    <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
+                    <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
+                    <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
+                </div>
+                <div class="enterence-image">
+                    <img class="tiktok-image" src="image/tiktok.png">
+                </div>
+        </div>
+        <div class="box">
+            <div class="left-text">
+                <h1 class="enterence-title">DİJİTAL</h1>
+                <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
+                <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
+                <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
+            </div>
+            <div class="enterence-image">
+                <img class="tiktok-image" src="image/tiktok.png">
+            </div>
+    </div>
+    <div class="box">
+        <div class="left-text">
+            <h1 class="enterence-title">DİJİTAL</h1>
+            <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
+            <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
+            <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
+        </div>
+        <div class="enterence-image">
+            <img class="tiktok-image" src="image/tiktok.png">
+        </div>
+</div>
+<div class="box">
+    <div class="left-text">
+        <h1 class="enterence-title">DİJİTAL</h1>
+        <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
+        <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
+        <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
+    </div>
+    <div class="enterence-image">
+        <img class="tiktok-image" src="image/tiktok.png">
+    </div>
+</div>
+
+        </div> <!-- end of .enterence-left -->
+            <div class="enterence-right">
+                
+            </div> <!-- end of .enterence-right-->
+            </div> <!-- end of .enterence-left -->
+        </div> <!-- end of .enterence-->
     </body>
 </html>
