--- a/index.html
+++ b/index.html
@@ -104,54 +104,61 @@
             </div> <!-- end of .box -->
             <div class="box">
                 <div class="left-text">
-                    <h1 class="enterence-title">DİJİTAL</h1>
-                    <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
-                    <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
-                    <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
+                    <h1 class="enterence-title">GİRİŞİM</h1>
+                    <a class="tiktok" href="#">Yapay zeka destekli siber güvenlik girişimi: StrixEye</a>
+                    <p>Bir web uygulamasına gelen tüm istekleri gerçek zamanlı olarak analiz edip anomali tespiti...</p>
+                    <a class="yazar" href="#">Arden Papuççiyan</a> <span>08 Ocak 2021</span>
                 </div>
                 <div class="enterence-image">
-                    <img class="tiktok-image" src="image/tiktok.png">
+                    <img class="tiktok-image" src="image/strixy.png">
                 </div>
-        </div>
+        </div><!-- end of .box -->
         <div class="box">
             <div class="left-text">
-                <h1 class="enterence-title">DİJİTAL</h1>
-                <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
-                <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
-                <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
+                <h1 class="enterence-title">KONUK YAZAR</h1>
+                <a class="tiktok" href="#">Girişim Mentorluğu: Keşfedilmemiş Bİr Dünya</a>
+                <p>Her girişimcilik programının olmazsa olmaz bir parçası mentorluk oluyor. Peki girişim...</p>
+                <a class="yazar" href="#">Şerafettin Özsoy</a> <span>08 Ocak 2021</span>
             </div>
             <div class="enterence-image">
-                <img class="tiktok-image" src="image/tiktok.png">
+                <img class="tiktok-image" src="image/shutter.png">
             </div>
-    </div>
+    </div><!-- end of .box -->
     <div class="box">
         <div class="left-text">
-            <h1 class="enterence-title">DİJİTAL</h1>
-            <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
-            <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
+            <h1 class="enterence-title">MESAJLAŞMA</h1>
+            <a class="tiktok" href="#">WhatsApp'ta kavimler göçü: Kullanıcılar Telegram, Signal ve BİP'e geçiyor</a>
+            <p>Yıllar içinde sosyal ağ devlerinin kullanıcı verilerini toplama ve işleme yöntemleriyle ilgili…</p>
             <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
         </div>
         <div class="enterence-image">
-            <img class="tiktok-image" src="image/tiktok.png">
+            <img class="tiktok-image" src="image/yazılım-geliştirme.png">
         </div>
-</div>
-<div class="box">
-    <div class="left-text">
-        <h1 class="enterence-title">DİJİTAL</h1>
-        <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
-        <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
-        <a class="yazar" href="#">Tuğçe İçözü</a> <span>08 Ocak 2021</span>
-    </div>
-    <div class="enterence-image">
-        <img class="tiktok-image" src="image/tiktok.png">
-    </div>
-</div>
-
+    </div><!-- end of .box -->
         </div> <!-- end of .enterence-left -->
             <div class="enterence-right">
+                <div class="enterence-right-bigtitle">
+                    <h1>Bugün Popüler</h1>
+                </div>
+                <div class="enterence-right-box">
+                    <a class="right-title" href="#">OpenAI'dan yazılı tanımlardan görsel üreten servis: DALL-E</a>
+                    <a class="position-yazar" href="#">Tuğçe İçözü</a>
+                </div>
+                <div class="enterence-right-box">
+                    <a class="right-title" href="#">2020 yılına damgasını vuran Among Us, bugüne kadar neler yaptı?</a>
+                    <a class="position-yazar" href="#">Arden Papuççiyan</a>
+                </div>
+                <div class="enterence-right-box">
+                    <a class="right-title" href="#">WhatsApp'ta kavimler göçü: Kullanıcılar Telegram, Signal ve BİP'e geçiyor</a>
+                    <a class="position-yazar" href="#">Arden Papuççiyan</a>
+                </div>
+                <div class="enterence-right-box">
+                    <a class="right-title" href="#">2020 yılında mobil uygulamalara 111 milyar dolar harcadık</a>
+                    <a class="position-yazar" href="#">Arden Papuççiyan</a>
+                </div>
                 
             </div> <!-- end of .enterence-right-->
-            </div> <!-- end of .enterence-left -->
+        </div> <!-- end of .enterence-left -->
         </div> <!-- end of .enterence-->
     </body>
 </html>
