--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
         <title>Proje</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
@@ -93,6 +93,7 @@
             <div class="enterence-left">
                 <div class="box">
                     <div class="left-text">
+                        <span class="line"></span>
                         <h1 class="enterence-title">DİJİTAL</h1>
                         <a class="tiktok" href="#">TikTok, İnternet Kanunu'nu kapsamında Türkiye-de yerel bir tüzel kişilik oluşturacağını açıkladı</a>
                         <p>Temmuz ayında Meclis'ten geçen 7253 sayılı...</p>
@@ -104,6 +105,7 @@
             </div> <!-- end of .box -->
             <div class="box">
                 <div class="left-text">
+                    <span class="line"></span>
                     <h1 class="enterence-title">GİRİŞİM</h1>
                     <a class="tiktok" href="#">Yapay zeka destekli siber güvenlik girişimi: StrixEye</a>
                     <p>Bir web uygulamasına gelen tüm istekleri gerçek zamanlı olarak analiz edip anomali tespiti...</p>
@@ -115,6 +117,7 @@
         </div><!-- end of .box -->
         <div class="box">
             <div class="left-text">
+                <span class="line"></span>
                 <h1 class="enterence-title">KONUK YAZAR</h1>
                 <a class="tiktok" href="#">Girişim Mentorluğu: Keşfedilmemiş Bİr Dünya</a>
                 <p>Her girişimcilik programının olmazsa olmaz bir parçası mentorluk oluyor. Peki girişim...</p>
@@ -126,6 +129,7 @@
     </div><!-- end of .box -->
     <div class="box">
         <div class="left-text">
+            <span class="line"></span>
             <h1 class="enterence-title">MESAJLAŞMA</h1>
             <a class="tiktok" href="#">WhatsApp'ta kavimler göçü: Kullanıcılar Telegram, Signal ve BİP'e geçiyor</a>
             <p>Yıllar içinde sosyal ağ devlerinin kullanıcı verilerini toplama ve işleme yöntemleriyle ilgili…</p>
@@ -152,7 +156,7 @@
                     <a class="right-title" href="#">WhatsApp'ta kavimler göçü: Kullanıcılar Telegram, Signal ve BİP'e geçiyor</a>
                     <a class="position-yazar" href="#">Arden Papuççiyan</a>
                 </div>
-                <div class="enterence-right-box">
+                <div class=" border">
                     <a class="right-title" href="#">2020 yılında mobil uygulamalara 111 milyar dolar harcadık</a>
                     <a class="position-yazar" href="#">Arden Papuççiyan</a>
                 </div>
