--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div> <!-- end of .enterence-left -->
             <div class="enterence-right">
                 <div class="enterence-right-bigtitle">
-                    <h1>Bugün Popüler</h1>
+                    <h1>BUGÜN POPÜLER</h1>
                 </div>
                 <div class="enterence-right-box">
                     <a class="right-title" href="#">OpenAI'dan yazılı tanımlardan görsel üreten servis: DALL-E</a>
