--- a/index.html
+++ b/index.html
@@ -163,6 +163,40 @@
                 
             </div> <!-- end of .enterence-right-->
         </div> <!-- end of .enterence-left -->
-        </div> <!-- end of .enterence-->
+    </div> <!-- end of .enterence-->
+    <div class="videos-container">
+        <div class="videos">
+            <div class="icons-cont">
+                <img class="play-icons" src="image/play-icon.png">
+            </div>
+                <img class="main-video" src="image/video.png">
+        </div> <!-- end of .videos-->
+        <div class="news-container">
+            <div class="news">
+                <img class="images-video" src="image/haber-1.png">
+                <div class="news-precontent">
+                    <a class="news-link new-link-2 link-color" href="#">Arda Kutsal sürprizi ile iPhone 12 Pro Max incelemesi</a>
+                </div>
+            </div> <!-- end of .news-->
+            <div class="news">
+                <img class="images-video" src="image/haber-1.png">
+                <div class="news-precontent">
+                    <a class="news-link new-link-2 link-color" href="#">Ses performansı ile ön plana çıkan tam kablosuz kulaklık:…</a>
+                </div>
+            </div> <!-- end of .news-->
+            <div class="news">
+                <img class="images-video" src="image/haber-1.png">
+                <div class="news-precontent">
+                    <a class="news-link new-link-2 link-color" href="#">Fintech dünyasında farklı bir yaklaşım: insha Ventures …</a>
+                </div>
+            </div> <!-- end of .news-->
+            <div class="news">
+                <img class="images-video" src="image/haber-1.png">
+                <div class="news-precontent">
+                    <a class="news-link new-link-2 link-color" href="#">Poco X3 NFC incelemesi</a>
+                </div>
+            </div> <!-- end of .news-->
+        </div> <!-- end of .news-container-->
+    </div> <!-- end of .videos-container-->
     </body>
 </html>
