--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 </div> <!-- end of .right-block-news -->
             </div> <!-- end of .right-block-->
         </div> <!-- end of .genel-container-->
+<div class="genel-container">
         <div class="enterence">
             <div class="enterence-left">
                 <div class="box">
@@ -164,11 +165,11 @@
             </div> <!-- end of .enterence-right-->
         </div> <!-- end of .enterence-left -->
     </div> <!-- end of .enterence-->
+</div>
+<div class="genel-container">
     <div class="videos-container">
         <div class="videos">
-            <div class="icons-cont">
                 <img class="play-icons" src="image/play-icon.png">
-            </div>
                 <img class="main-video" src="image/video.png">
         </div> <!-- end of .videos-->
         <div class="news-container">
@@ -198,5 +199,6 @@
             </div> <!-- end of .news-->
         </div> <!-- end of .news-container-->
     </div> <!-- end of .videos-container-->
+</div>   
     </body>
 </html>
