--- a/index.html
+++ b/index.html
@@ -174,25 +174,37 @@
         </div> <!-- end of .videos-->
         <div class="news-container">
             <div class="news">
-                <img class="images-video" src="image/haber-1.png">
+                <div class="flat-image">
+                    <img class="images-video" src="image/iphone.png">
+                    <img class="flat" src="image/play-flat.png">
+                </div>
                 <div class="news-precontent">
                     <a class="news-link new-link-2 link-color" href="#">Arda Kutsal sürprizi ile iPhone 12 Pro Max incelemesi</a>
                 </div>
             </div> <!-- end of .news-->
             <div class="news">
-                <img class="images-video" src="image/haber-1.png">
+                <div class="flat-image">
+                    <img class="images-video" src="image/kulaklik.png">
+                    <img class="flat" src="image/play-flat.png">
+                </div>
                 <div class="news-precontent">
                     <a class="news-link new-link-2 link-color" href="#">Ses performansı ile ön plana çıkan tam kablosuz kulaklık:…</a>
                 </div>
             </div> <!-- end of .news-->
             <div class="news">
-                <img class="images-video" src="image/haber-1.png">
+                <div class="flat-image">
+                    <img class="images-video" src="image/fintech.png">
+                    <img class="flat" src="image/play-flat.png">
+                </div>
                 <div class="news-precontent">
                     <a class="news-link new-link-2 link-color" href="#">Fintech dünyasında farklı bir yaklaşım: insha Ventures …</a>
                 </div>
             </div> <!-- end of .news-->
             <div class="news">
-                <img class="images-video" src="image/haber-1.png">
+                <div class="flat-image">
+                    <img class="images-video" src="image/poco.png">
+                    <img class="flat-1" src="image/play-flat.png">
+                </div>
                 <div class="news-precontent">
                     <a class="news-link new-link-2 link-color" href="#">Poco X3 NFC incelemesi</a>
                 </div>
