--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <img class="flat" src="image/play-flat.png">
                 </div>
                 <div class="news-precontent">
-                    <a class="news-link new-link-2 link-color" href="#">Arda Kutsal sürprizi ile iPhone 12 Pro Max incelemesi</a>
+                    <a class="news-link new-link-2 link-color" href="https://www.youtube.com/watch?v=bchacYLXp-Q">Arda Kutsal sürprizi ile iPhone 12 Pro Max incelemesi</a>
                 </div>
             </div> <!-- end of .news-->
             <div class="news">
@@ -188,7 +188,7 @@
                     <img class="flat" src="image/play-flat.png">
                 </div>
                 <div class="news-precontent">
-                    <a class="news-link new-link-2 link-color" href="#">Ses performansı ile ön plana çıkan tam kablosuz kulaklık:…</a>
+                    <a class="news-link new-link-2 link-color" href="https://www.youtube.com/watch?v=wtyggMdYbTY">Ses performansı ile ön plana çıkan tam kablosuz kulaklık:…</a>
                 </div>
             </div> <!-- end of .news-->
             <div class="news">
@@ -197,7 +197,7 @@
                     <img class="flat" src="image/play-flat.png">
                 </div>
                 <div class="news-precontent">
-                    <a class="news-link new-link-2 link-color" href="#">Fintech dünyasında farklı bir yaklaşım: insha Ventures …</a>
+                    <a class="news-link new-link-2 link-color" href="https://www.youtube.com/watch?v=JivNehYGs2I">Fintech dünyasında farklı bir yaklaşım: insha Ventures …</a>
                 </div>
             </div> <!-- end of .news-->
             <div class="news">
@@ -206,7 +206,7 @@
                     <img class="flat-1" src="image/play-flat.png">
                 </div>
                 <div class="news-precontent">
-                    <a class="news-link new-link-2 link-color" href="#">Poco X3 NFC incelemesi</a>
+                    <a class="news-link new-link-2 link-color" href="https://www.youtube.com/watch?v=kH-GZBWYJUw">Poco X3 NFC incelemesi</a>
                 </div>
             </div> <!-- end of .news-->
         </div> <!-- end of .news-container-->
