--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div> <!-- end of .enterence-left -->
     </div> <!-- end of .enterence-->
 </div>
-<div class="genel-container">
+<div class="genel-container-2">
     <div class="videos-container">
         <div class="videos">
                 <img class="play-icons" src="image/play-icon.png">
