--- a/index.html
+++ b/index.html
@@ -208,9 +208,62 @@
                 <div class="news-precontent">
                     <a class="news-link new-link-2 link-color" href="https://www.youtube.com/watch?v=kH-GZBWYJUw">Poco X3 NFC incelemesi</a>
                 </div>
-            </div> <!-- end of .news-->
+            </div> <!--- end of .news-->
         </div> <!-- end of .news-container-->
     </div> <!-- end of .videos-container-->
-</div>   
+</div>  <!-- end of .genel-container -->
+        <div class="genel-container-2">
+            <div class="ticket-container">
+                <span class="big-title">w'etkinlik</span> 
+                <div class="ticket">
+                    <div class="position-title">
+                        <img class="ticket-image" src="image/social-network.png">
+                        <p>e-ticaret</p>
+                    </div>
+                    <div class="ticket-bottom-box">
+                        <span>17 şubat 2021</span>
+                        <span>Online</span>
+                        <a href="#"> Webrazzi E-Ticaret 2021</a>
+                        <p>Türkiye'nin En Etkili E-Ticaret Konferansı</p>
+                        <div class="button">
+                            <button class="sell">Bilet Al</button>
+                            <button class="examine">İncele</button>
+                        </div>
+                    </div>
+                </div> <!-- end of .ticket-->
+                <div class="ticket">
+                    <div class="position-title">
+                        <img class="ticket-image" src="image/ticket-image.png">
+                        <p>w-dijital</p>
+                    </div>
+                    <div class="ticket-bottom-box">
+                        <span>17 şubat 2021</span>
+                        <span>Online</span>
+                        <a href="#"> Webrazzi E-Ticaret 2021</a>
+                        <p>Türkiye'nin En Etkili E-Ticaret Konferansı</p>
+                        <div class="button">
+                            <button class="sell">Bilet Al</button>
+                            <button class="examine">İncele</button>
+                        </div>
+                    </div>
+                </div> <!-- end of .ticket-->
+                <div class="ticket">
+                    <div class="position-title">
+                        <img class="ticket-image" src="image/ticket-image-2.png">
+                        <p>w-develop</p>
+                    </div>
+                    <div class="ticket-bottom-box">
+                        <span>17 şubat 2021</span>
+                        <span>Online</span>
+                        <a href="#"> Webrazzi E-Ticaret 2021</a>
+                        <p>Türkiye'nin En Etkili E-Ticaret Konferansı</p>
+                        <div class="button">
+                            <button class="sell">Bilet Al</button>
+                            <button class="examine">İncele</button>
+                        </div>
+                    </div>
+                </div> <!-- end of .ticket-->
+            </div> <!-- end of .ticket-container-->
+        </div> <!-- end of .genel-container-2 -->
     </body>
 </html>
